--- a/Holiday_Project.vcxproj.filters
+++ b/Holiday_Project.vcxproj.filters
@@ -55,6 +55,9 @@
     <ClCompile Include="CameraPropertiesHolderWorker.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PropertyWidget.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="CustomGraphicsView.h">
@@ -80,5 +83,21 @@
     <QtUic Include="CameraPropertiesHolder.ui">
       <Filter>Form Files</Filter>
     </QtUic>
+    <QtUic Include="PropertyWidget.ui">
+      <Filter>Form Files</Filter>
+    </QtUic>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="PropertyWidget.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Holiday_Project.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
